Optimize CQL library evaluation and consequently measure evaluation (#688)
* First attempt to flip measure and subject looping for population based measure reports.

* Document new unit test failures.

* Abandon previous experiment.  Push up evaluate measure callers to the service layers for single and multi measures and collect data.   Leave old evaluate measure code within processor for the time being as there are still unit test failures otherwise, hopefully limited to single measure evaluation.

* Capture discussion with Justin and requirements but lots of compile errors.

* Put in place changes agreed with Justin and all tests except one are passing.

* Fix CollectData unit test by making resolveParameterMap work with a mutable list.

* Spotless.  Delete some cruft.

* Cleanup and new TODOs.

* Fix compile errors.

* Small tweaks and TODOs.

* Overhaul CompositeEvaluationResultsPerMeasure to include errors as well as successful results, and enhancing it to mutate a given MeasureDef with errors should they exist.  Start cleaning up.  Spotless.

* Cleanup.  Spotless.

* Spotless.

* Handle new MeasureProcessorUtils#setMeasurePeriod, ensure all callers call it correctly, and get rid of duplicate methods.

* Clean up todos and ensure library checking is done in only one place.

* More refactoring and resolve TODOs.

* Resolve sonar warnings.

* Reverse a sonar change that caused errors.  Fix other sonar issues.  Tests pass now.

* Initialize the CqlEngine context at the beginning, pass it to down to the CQL library evaluation, and then to the measure evaluation.

* More cleanup of dead code, commented out code, and dead parameters.

* Fix compile error.  Fix more sonar.  Spotless.  Get rid of unused constructor param.

* Get rid of legacy CQL evaluation and have DSTU3 use the new code.

* Fix sonar and reverse some minor changes.

* Fix DSTU3 tests and resolve last sonar.

* More refactoring to DRY and to remove unused fields.

* Small refactoring for multi-measure